# Training

./: .gitignore  LICENSE  README.md  Rectangle_Area_Peri.py  add_n_nums.py  factorial_n_odd_nums.py  factorial_n_odd_nums_neg.py  max_2_nums.py  max_3_nums.py  max_4_num.py  multiply_n_nums.py
Logic Building Flowcharts/: add_n_nums.py  (+7 more)
Rust/all_assignments/: Cargo.toml
Rust/all_assignments/data/: SkillData  StudentData_Server.json  final_data.json  sr_or_c.json  student_hmap_data.json
Rust/all_assignments/src/: lib.rs  main.rs
Rust/all_assignments/src/modules/: mod.rs
Rust/all_assignments/src/modules/employee_hashmap/: mod.rs
Rust/all_assignments/src/modules/employee_task/: mod.rs
Rust/all_assignments/src/modules/frequency_task/: mod.rs  task1.rs  task2.rs
Rust/all_assignments/src/modules/practice/: mod.rs
Rust/all_assignments/src/modules/rest_apis/employee/: model.rs  service.rs
Rust/all_assignments/src/modules/rest_apis/health_check/: mod.rs
Rust/all_assignments/src/modules/rest_apis/helper_func/: common_funcs.rs
Rust/all_assignments/src/modules/rest_apis/middleware/: cors.rs
Rust/all_assignments/src/modules/rest_apis/student/: mod.rs  service.rs
Rust/all_assignments/src/modules/rest_apis/users/: mod.rs  model.rs  service.rs
Rust/all_assignments/src/modules/server_task/: mod.rs
Rust/all_assignments/src/modules/server_task/config/: mod.rs
Rust/all_assignments/src/modules/server_task/employee/: mod.rs  service.rs
Rust/all_assignments/src/modules/server_task/helper_func/: common_funcs.rs  mod.rs
Rust/all_assignments/src/modules/student/: mod.rs
Rust/all_assignments/src/modules/student_hashmap/: mod.rs
Rust/all_assignments/src/modules/table_hashmap/: font_data.rs  mod.rs
Rust/all_assignments/src/modules/task_scheduler/: bifergation.rs  data.rs  data_randomizer.rs  mod.rs  monitoring.rs  random_data_gen.rs  task_assigner.rs
Rust/all_assignments/src/modules/thread_task/: mod.rs
Rust/all_assignments/src/modules/type_collections/: mod.rs
Rust/grpc_rust/: Cargo.toml  build.rs
Rust/grpc_rust/data/: StudentData_Server.json
Rust/grpc_rust/proto/: services.proto
Rust/grpc_rust/src/: data.rs  helper_fun.rs  lib.rs  server.rs
Rust/grpc_rust/src/employee/: mod.rs  model.rs  service.rs
Rust/grpc_rust/src/student/: mod.rs  model.rs  service.rs
Rust/grpc_rust/src/user/: mod.rs  model.rs  service.rs
Rust/temp_file/rust/ax_server/: Cargo.toml
Rust/temp_file/rust/ax_server/src/: buisness_logic.rs  lib.rs  main.rs  req_checker.rs
Rust/temp_file/rust/demo_api_server/: Cargo.toml
Rust/temp_file/rust/demo_api_server/src/: main.rs
Rust/temp_file/rust/server_task/: Cargo.toml
Rust/temp_file/rust/server_task/data/: Employee.json  Master_Data.json
Rust/temp_file/rust/server_task/src/: lib.rs  main.rs
(+149 files in other folders)
