[package]
name = "module_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
serde={version = "1.0.195",features = ["derive"]}
lazy_static = "1.4.0"
rand="0.8.5"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.4"
axum-server = "0.6.0"
tower-http = { version = "0.5.1", features = ["cors"] }
tower = "0.4.13"
