[package]
name = "ax_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros","rt-multi-thread"] }
axum-server = "0.6.0"
axum = { version = "0.7.4"}
serde = { version = "1.0.196", features = ["derive"] }
tower = "0.4.13"
