[package]
name = "gussing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195",features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.73"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}

lazy_static="1.4.0"
rand = "0.8"
hyper = "0.14.28"
tower-http = { version = "0.3.0", features = ["cors", "trace"] } # added
axum = { version = "0.6.4", features = ["multipart"] }
tower = { version = "0.4.13", features = ["full"]}
config = "0.14"


