[package]
name = "server_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-server = "0.6.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
lazy_static="1.4.0"
serde_json = "1.0.113"
tower-http = { version = "0.5.1", features = ["cors"] }
tikv-client = "0.3.0"
protoc = "2.28.0"
